# swayped.rst

./: Cargo.toml  config.toml  swayped.service
src/: commands.rs  config.rs  gesture.rs  lib.rs  main.rs  pointer.rs  swipe.rs
