[package]
name = "swayped"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
input = "0.7.1"
libc = "0.2"
log = "0.4"
swayipc = "3.0.1"
syslog = "6.0"
tokio = { version = "1.29.1", features = ["full", "macros", "rt", "net", "signal"] }
